@@ -52,6 +52,7 @@ public:
 	
 	/* @GenerateCBinding,GeneratePInvoke */
 	bool ApplyTemplate ();
+	void ClearTemplate ();
 
 	/* @GenerateCBinding,GeneratePInvoke */
 	DependencyObject *GetTemplateChild (const char *name);
