@@ -1,3 +1,10 @@
+2009-05-07  Alan McGovern  <amcgovern@novell.com>
+
+	* control.h:
+	* control.cpp:
+	* contentcontrol.cpp: If the content property changes, the
+	  Template is cleared if it has already been applied.
+
 2009-05-07  Andreia Gaita  <avidigal@novell.com>
 
 	* src/uielement.cpp (GetTransformToUIElementWithError): Don't fail if
